--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 /*
-Theme Name: Iwakiyoho
+Theme Name: iwaki-bee-yard
 Version: 1.0.0
-Author: Iwaki_yoho
+Author: iwaki-bee-yard
 Description: いわき養蜂場
 License: GNU General Public License v2 or later
 */
